# atmoslib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/atmoslib/: __init__.py  attenuation.py  constants.py  thermodynamics.py
tests/: test_attenuation.py  test_barometric_pressure_profile.py  test_geometric_height.py  test_humidity.py  test_hydrostatic_pressure.py  test_invariants.py  test_isa.py  test_saturation_vapor_pressure.py  test_temperature.py  test_wet_bulb.py
