[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Simo Tukiainen", email = "simo.tukiainen@fmi.fi"},
  {name = "Tuomas Siipola", email = "tuomas.siipola@fmi.fi"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "numpy",
  "scipy",
]
description = "Python library for atmospheric thermodynamic calculations"
dynamic = ["version"]
name = "atmoslib"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pre-commit", "release-version"]
test = [
  "mypy",
  "pytest",
  "ruff",
  "scipy-stubs",
]

[project.urls]
Homepage = "https://github.com/actris-cloudnet/atmoslib"
Issues = "https://github.com/actris-cloudnet/atmoslib/issues"

[tool.hatch.version]
path = "src/atmoslib/version.py"

[tool.mypy]
check_untyped_defs = true

[tool.release-version]
changelog = "CHANGELOG.md"
filename = "src/atmoslib/version.py"
pattern = ["__version__ = \"(?P<major>\\d+).(?P<minor>\\d+).(?P<patch>\\d+)\""]

[tool.ruff.lint]
ignore = ["ANN401", "C9", "COM812", "D1", "N806", "PLR"]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0414"]
"tests/*.py" = ["ANN", "INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
sort_inline_arrays = true
trailing_comma_inline_array = true
